# chat-bot-qa

./: .env.example  README.md  main.py  pyproject.toml
src/chatbot/: chat_bot_faiss.py
src/chatgpt_with_faiss/: service.py
src/data_manager/: file_loader.py  models.py  service.py  splitters.py  text_preprocessor.py
src/data_manager/loaders/: file_loader.py
src/langchain_chatgpt/: service.py
src/langchain_option/: service.py
