[tool.poetry]
name = "chat-bot-qa"
version = "0.1.0"
description = ""
authors = ["Ivan Puhach"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.114.2"}
uvicorn = "^0.30.6"
scikit-learn = "^1.5.2"
nltk = "3.8.1"
sentence-transformers = "^3.1.1"
faiss-cpu = "^1.8.0.post1"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:app"